examples/test/testpolicy18581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18581
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key37: value21
      key35: value4
      key39: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
          key14: value40
          key17: value47
      podSelector:
        matchLabels:
          key8: value40
          key37: value44
          key29: value31
